<resources>
    <string name="app_name">GrammarEngPro</string>
    <string name="label_grammar">Grammar</string>
    <string name="label_practice">Practice</string>
    <string name="label_notebook">Notebook</string>
    <string name="label_more">More</string>
    <string name="title_grammar">Grammar</string>
    <string name="title_practice">Practice</string>
    <string name="title_notebook">Notebook</string>
    <string name="title_more">More</string>
    <string name="label_translate">Translate</string>
    <string name="title_translate">Translate</string>
    <string name="hint_enter_word">Enter text</string>
    <string name="msg_get_list_grammar_empty">List Grammar Empty !</string>
    <string name="title_detail_grammar">Detail Grammar</string>
    <string name="msg_get_list_struct_empty">List Struct Empty !</string>
    <string name="msg_get_list_detail_empty">List Detail Empty !</string>
    <string name="title_detail"><b>Detail: </b></string>
    <string name="title_example"><b>Example: </b></string>
    <string name="title_note"><b>Note: </b></string>
    <string name="msg_get_list_practice_empty">List Practice Empty !</string>
    <string name="title_question">Question </string>
    <string name="title_exam">Exam</string>
    <string name="msg_get_list_detail_practice_empty">List Exam Empty !</string>
    <string name="label_next">Next</string>
    <string name="label_prev">Prev</string>
    <string name="label_exit_exam">Do you want exit exam ?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_download_translate">This is your first translation, please download the language pack</string>
    <string name="label_download">Download...</string>
    <string name="label_download_success">Download Success !</string>
    <string name="label_result">Result</string>
    <string name="msg_get_list_note_empty">List Note Empty !</string>
    <string name="hint_title_note">Title Note</string>
    <string name="label_add">Add</string>
    <string name="hint_content_note">Content Note</string>
    <string name="msg_empty_content">Please enter title</string>
    <string name="msg_remove_success">Remove Success !</string>
    <string name="title_schedule_free">Choose Your Schedule Free</string>
    <string name="label_recommend">Recommend</string>
    <string name="title_choose_time">Choose time: </string>
    <string name="title_notification">Notification: </string>
    <string name="msg_empty_free_time">Please enter your free time !</string>
    <string name="msg_error_choose_time">Please Choose Schedule</string>
    <string name="label_notification">Open Notification</string>
    <string name="label_cancel_notification">Cancel Notification</string>
    <string name="title_notifi">Open the app now !</string>
    <string name="lable_notifi">Try to be persistent !!!</string>
</resources>