<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/dp_24"
    android:layout_marginEnd="@dimen/dp_24"
    tools:ignore="UselessParent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        app:cardCornerRadius="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTitleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/title_note"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageDelete"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_16"
                android:src="@drawable/ic_baseline_delete_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleNote"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textTitleNote" />

            <ImageView
                android:id="@+id/imageEdit"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_16"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/textTitleNote"
                app:layout_constraintEnd_toStartOf="@+id/imageDelete"
                app:layout_constraintTop_toTopOf="@+id/textTitleNote" />


            <EditText
                android:id="@+id/editTitleNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:background="@drawable/bg_edit_note"
                android:gravity="center_vertical"
                android:hint="@string/hint_title_note"
                android:padding="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="@+id/textTitleNote"
                app:layout_constraintTop_toBottomOf="@+id/textTitleNote" />

            <EditText
                android:id="@+id/editContentNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:layout_margin="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/bg_edit_note"
                android:gravity="top"
                android:hint="@string/hint_content_note"
                android:padding="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="@+id/textTitleNote"
                app:layout_constraintTop_toBottomOf="@+id/editTitleNote" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_20"
                app:layout_constraintTop_toBottomOf="@+id/editContentNote" />

            <TextView
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/bg_edit_note"
                android:padding="@dimen/dp_16"
                android:text="@string/label_add"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContentNote" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>